.opsera-cwa-test-4/k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-cwa-test-4-staging
  labels:
    tenant: opsera
    app: cwa-test-4
    environment: staging
    managed-by: opsera-c2c
