.opsera-cwa-test-4/k8s/overlays/staging/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: cwa-test-4-preview
  labels:
    app: cwa-test-4
    environment: staging
    service-type: preview
    managed-by: opsera-c2c
spec:
  type: ClusterIP
  selector:
    app: cwa-test-4
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
